# comp25

DOOML/: DOOML.opam  dune-project  shell.nix
DOOML/lib/: anf.ml  ast.ml  builtin.ml  cc.ml  cc.mli  codegen.ml  codegen.mli  dune  fe.ml  ll.ml  ll.mli  llvm_wrapper.ml  riscv.ml  state.ml
DOOML/lib/runtime/: any-call-runtime.c  call-runtime.h  gc-runtime.c  riscv-call-runtime.c  runtime.c
DOOML/tests/: .ocamlformat-ignore  closure.ml  dune  fac.ml  fib-cps.ml  llvm.t  riscv.t
DopsaML/: dune-project
DopsaML/lib/: Inferencer.ml  ast.ml  dune  parser.ml  ty.ml
DopsaML/tests/: dune  infer_test.ml  parser_test.ml
EML/: .gitignore
EML/lib/backend/llvm_ir/: analysis.ml  generator.ml
EML/lib/backend/ricsv/: analysis.ml  architecture.ml  architecture.mli  generator.ml  generator.mli  peephole.ml  peephole.mli  runner.ml  runner.mli
EML/lib/frontend/: ast.ml  parser.ml
EML/lib/middleend/: anf.ml  inferencer.ml  inferencer.mli  resolve_builtins.ml  resolve_builtins.mli  runner.ml
EML/lib/utils/: pretty_printer.ml
EML/tests/: anf_tests.ml  dune  infer.t  inferencer_tests.ml  llvm.t  llvm_tests.ml  parser_tests.ml  riscv.t  riscv_peephole_tests.ml  riscv_peephole_tests.mli  riscv_tests.ml
EML/tests/additional_tests/: custom_op_left_associativity.ml  custom_op_pipe.ml  custom_op_right_associativity.ml  custom_op_shadowing.ml  custom_op_via_op.ml
PudgeWithMoML/lib/frontend/: parser.mli
